斜めのラインを使ったデザインの追加

--- a/index.html
+++ b/index.html
@@ -38,29 +38,30 @@
 					<h1 data-splitting class="home-title headline--float headline">Welcome to<br>
 					kabetsu36's<br>
 					portfolio site!</h1><!-- <p class="home-subtitle">Check out some of my works.</p> -->
-			</div><!-- /#home -->
+		</div><!-- /#home -->
 
-		<div id="about">
+<section class="se-container">
+		<div id="about" class="se-slope">
 				<div class="wrapper">
 					<h2 class="section-title">ABOUT ME</h2>
 					<div class="about-content">
 						<img class="about-picture" src="images/about.jpg">
-						<p class="about-text">自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。<br>自己紹介文。自己<紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。</p>
+						<p class="about-text">自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。<br>自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。自己紹介文。</p>
 					</div>
 				</div>
 			</div><!-- /#about -->
-		<div id="portfolio">
+		<div id="portfolio" class="se-slope">
 				<div class="wrapper">
 					<h2 class="section-title">PORTFOLIO</h2>
 					<div class="portfolio-contents">
 						<div id="portfolio-main" class="portfolio-main">
 							<img id="portfolio-main-image">
-							<p id="baloon" class="baloon"></p>
+							<p class="baloon"></p>
 						</div>
 						<nav>
 							<ul>
-								<li id="prev">&lt;</li>
-								<li id="next">&gt;</li>
+								<li id="prev">◀</li>
+								<li id="next">▶</li>
 							</ul>
 						</nav>
 						<ul class="thumbnails">
@@ -68,24 +69,34 @@
 					</div>
 			</div>
 		</div><!-- /#portfolio -->
-		<div id="skills">
+		<div id="skills" class="se-slope">
 				<div class="wrapper">
 					<h2 class="section-title">MY SKILLS</h2>
-					<div class="skills-container">
-						<div class="circle-1">
-							<img src="images/baseline_lightbulb_white_48dp.png">
-						  <p>Praesent nec erat urna. Integer feugiat vel libero id porta. Aenean elementum lectus vitae est fringilla iaculis. Nulla aliquet sem pulvinar.</p>
-						</div>
-						<div class="circle-2">
-						  <p>Suspendisse eros augue, gravida sed interdum at, laoreet vel sem. Pellentesque auctor hendrerit, sit amet interdum nisl aliquam. Nunc vel porttitor augue.</p>
-						</div>
-						<div class="circle-3">
-						  <p>Integer ultrices a nulla sit amet aliquet. Praesent quis gravida turpis. Donec viverra venenatis pulvinar. Sed ut luctus mauris, in pulvinar turpis. Donec sodales velit consequat.</p>
-						</div>
-					</div>
+              <div class="skills-contents">
+                <div class="circle-content">
+  							<h3>SKILL</h3>
+  						  <p>スキルの説明です。スキルの説明です。スキルの説明です。スキルの説明です。スキルの説明です。</p>
+                </div>
+                <div class="circle-content">
+                <h3>SKILL</h3>
+                <p>スキルの説明です。スキルの説明です。スキルの説明です。スキルの説明です。スキルの説明です。</p>
+                </div>
+                <div class="circle-content">
+                <h3>SKILL</h3>
+                <p>スキルの説明です。スキルの説明です。スキルの説明です。スキルの説明です。スキルの説明です。</p>
+                </div>
+              </div>
+            <div class="skills-circles">
+              <div class="circle">
+              </div>
+              <div class="circle">
+              </div>
+              <div class="circle">
+              </div>
+            </div>
 				</div>
 			</div><!-- /#skills -->
-		<div id="contact">
+		<div id="contact" class="se-slope">
 				<div class="wrapper">
 					<h2 class="section-title">CONTACT</h2>
 					<form class="contact-form">
@@ -101,12 +112,13 @@
 						</div><input class="button" type="submit" value="送信">
 					</form>
 				</div>
+			</div><!-- /#contact -->
 				<footer>
 					<div class="wrapper">
 						<p><small>&copy; 2021 ○○</small></p>
 					</div>
 				</footer>
-			</div><!-- /#contact -->
+	</section>
 	<script type="text/javascript" src="main.js"></script>
 
 </body>
